--- a/mturk_vsl.Rmd
+++ b/mturk_vsl.Rmd
@@ -14,6 +14,8 @@ library(ggplot2)
 library(knitr)
 library(readr)
 library(psych)
+library(ppcor)
+library(nortest)
 ```
 
 
@@ -86,16 +88,6 @@ dprime<-NULL
 for (i in seq(from=1,to=length(subj_table$list_vsl_id),by=1)){dprime<-append(dprime,qnorm(subj_table[i,]$hit_rate-0.00000001)-qnorm(subj_table[i,]$false_alarm+0.000000001))} #minus 0.000000001 to avoid perfect hit rate
 subj_table$dprime <- round(dprime,3)
 
-wj3$ID<-gsub("_wj3.csv","",wj3$ID)
-for(id in wj3$ID){ subj_table$wj3_score[which(subj_table$list_vsl_id==id)]<-wj3$total[wj3$ID==id]}
-
-for(id in scf$ID){ subj_table$gender[which(subj_table$list_vsl_id==id)]<-paste(scf$Gender[scf$ID==id])}
-for(id in scf$ID){ subj_table$handedness[which(subj_table$list_vsl_id==id)]<-paste(scf$Hand[scf$ID==id])}
-for(id in scf$ID){ subj_table$Language[which(subj_table$list_vsl_id==id)]<-paste(scf$Language[scf$ID==id])}
-subj_table$Language <- as.numeric(subj_table$Language)
-
-subset2<- subj_table[subj_table$Language>=20,]
-subset1 <- subj_table[subj_table$gender!="Other",]
 ```
 
 
@@ -148,11 +140,29 @@ for (id in acc_id) {subj_corr <- append(subj_corr,round(sum(vsl_accuracy$corr[vs
 vsl_acc_table <- data.frame(acc_id,subj_corr,vsl_cond)
 
 
+
+wj3$ID<-gsub("_wj3.csv","",wj3$ID)
+for(id in wj3$ID){ subj_table$wj3_score[which(subj_table$list_vsl_id==id)]<-wj3$total[wj3$ID==id]}
+
+for(id in scf$ID){ subj_table$gender[which(subj_table$list_vsl_id==id)]<-paste(scf$Gender[scf$ID==id])}
+for(id in scf$ID){ subj_table$handedness[which(subj_table$list_vsl_id==id)]<-paste(scf$Hand[scf$ID==id])}
+for(id in scf$ID){ subj_table$Language[which(subj_table$list_vsl_id==id)]<-paste(scf$Language[scf$ID==id])}
+subj_table$Language <- as.numeric(subj_table$Language)
+for(id in scf$ID){ subj_table$age[which(subj_table$list_vsl_id==id)]<-paste(scf$age[scf$ID==id])}
+subj_table$age <- as.numeric(subj_table$age)
+
+subset2<- subj_table[subj_table$Language>=20,]
+subset1 <- subj_table[subj_table$gender!="Other",]
+
 for(id in scf$ID){ vsl_acc_table$gender[which(vsl_acc_table$acc_id==id)]<-paste(scf$Gender[scf$ID==id])}
 for(id in wj3$ID){ vsl_acc_table$wj3_score[which(vsl_acc_table$acc_id==id)]<-wj3$total[wj3$ID==id]}
 
  for(id in scf$ID){ vsl_acc_table$Language[which(vsl_acc_table$acc_id==id)]<-paste(scf$Language[scf$ID==id])}
 vsl_acc_table$Language <- as.numeric(vsl_acc_table$Language)
+
+for(id in scf$ID){ vsl_acc_table$age[which(vsl_acc_table$acc_id==id)]<-paste(scf$age[scf$ID==id])}
+vsl_acc_table$age <- as.numeric(vsl_acc_table$age)
+for(id in scf$ID){ vsl_acc_table$handedness[which(vsl_acc_table$acc_id==id)]<-paste(scf$Hand[scf$ID==id])}
 
 ```
 
@@ -172,6 +182,10 @@ qqnorm(subj_table$wj3_score,main="WJ4 Score");qqline(subj_table$wj3_score, col =
 qqnorm(subj_table$rt_slope, main="RT Slope");qqline(subj_table$rt_slope, col = 2)
 qqnorm(subj_table$age,main="Age");qqline(subj_table$age, col = 2)
 qqnorm(vsl_acc_table$subj_corr,main="Accuracy");qqline(vsl_acc_table$subj_corr, col = 2)
+ad.test(subj_table$wj3_score)
+ad.test(subj_table$rt_slope)
+ad.test(subj_table$age)
+ad.test(vsl_acc_table$subj_corr)
 ```
 
 
@@ -198,6 +212,17 @@ t.test(vsl_acc_table$subj_corr,mu=0.5,alternative="greater")
 
 #Relationship between SL and other factors
 
+##RT Slope
+```{r,echo=FALSE}
+summary(lm(rt_slope~ wj3_score * age + as.factor(handedness) + as.factor(gender),data=subj_table))
+
+```
+#Accuracy
+```{r,echo=FALSE}
+summary(lm(subj_corr ~ wj3_score * age + as.factor(handedness) + as.factor(gender) ,data=vsl_acc_table))
+
+```
+
 ##RT slope and other factors
 ```{r,echo=FALSE,warning=FALSE}
 #RT by WJ4 score
@@ -207,14 +232,14 @@ t.test(vsl_acc_table$subj_corr,mu=0.5,alternative="greater")
 ggplot(subj_table[subj_table$wj3_score>25,],aes(y=rt_slope,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time slope",title="Resposne time slope by WJ4 score in VSL")  + ylim(c(-15,15))
 
 #RT slope  vs WJ4 score by gender
-qplot(wj3_score,rt_slope,data=subset1[subset1$wj3_score>25,],facets=(. ~ gender),color= gender, main="vsl RT slope vs WJ4 scpre by gender", ylab="RT Slope", xlab="WJ4 score", ylim=c(-15,15)) + geom_smooth(method='lm') + scale_color_discrete(name="Gender")
+#qplot(wj3_score,rt_slope,data=subset1[subset1$wj3_score>25,],facets=(. ~ gender),color= gender, main="vsl RT slope vs WJ4 scpre by gender", ylab="RT Slope", xlab="WJ4 score", ylim=c(-15,15)) + geom_smooth(method='lm') + scale_color_discrete(name="Gender")
 
 
 #Mean rt vs WJ4 score by Handedness
 #qplot(wj3_score,mean_rt,data=subj_table[subj_table$wj3_score>25,],facets=(. ~ handedness),color= handedness, main="vsl RT vs WJ4 score by Handedness", ylab="Response time", xlab="WJ4 score", ylim=c(100,600)) + geom_smooth(method='lm') + scale_color_discrete(name="Handedness")
 
 #RT Slope vs WJ4 score by Handedness
-qplot(wj3_score,rt_slope,data=subj_table[subj_table$wj3_score>25,],facets=(. ~ handedness),color= handedness, main="vsl RT slope vs WJ4 score by Handedness", ylab="Response time slope", xlab="WJ4 score", ylim=c(-15,15)) + geom_smooth(method='lm') + scale_color_discrete(name="Handedness")
+#qplot(wj3_score,rt_slope,data=subj_table[subj_table$wj3_score>25,],facets=(. ~ handedness),color= handedness, main="vsl RT slope vs WJ4 score by Handedness", ylab="Response time slope", xlab="WJ4 score", ylim=c(-15,15)) + geom_smooth(method='lm') + scale_color_discrete(name="Handedness")
 
 
 
@@ -222,7 +247,7 @@ qplot(wj3_score,rt_slope,data=subj_table[subj_table$wj3_score>25,],facets=(. ~ h
 #ggplot(subset2,aes(y=mean_rt,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time (ms)",title="Resposne time by Language score in vsl") + ylim(c(100,700))
 
 #RT Slope by Language
-ggplot(subset2,aes(y=rt_slope,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time (ms)",title="RT slope by Language score in vsl") + ylim(c(-15,15))
+#ggplot(subset2,aes(y=rt_slope,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="Language Experience Score", y="Response time (ms)",title="RT slope by Language score in vsl") + ylim(c(-15,15))
 
 
 
@@ -242,13 +267,19 @@ pcor.test(subj_table$wj3_score, subj_table$rt_slope, subj_table$age, method="spe
 ```{r,echo=FALSE}
 
 ggplot(vsl_acc_table[vsl_acc_table$wj3_score>25,],aes(y=subj_corr,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Accuracy",title="Accuracy by WJ4 score in vsl") 
-ggplot(vsl_acc_table[vsl_acc_table$Language>=20,],aes(y=subj_corr,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="Language", y="Accuracy",title="Accuracy by Language in vsl") 
+#ggplot(vsl_acc_table[vsl_acc_table$Language>=20,],aes(y=subj_corr,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="Language", y="Accuracy",title="Accuracy by Language in vsl") 
 
 
-for(id in scf$ID){ vsl_acc_table$gender[which(vsl_acc_table$acc_id==id)]<-paste(scf$Gender[scf$ID==id])}
-t.test(vsl_acc_table$subj_corr[vsl_acc_table$gender=="Female"],vsl_acc_table$subj_corr[vsl_acc_table$gender=="Male"])
+
+```
 
 
+
+## A partial correlation test between WJ4 score and Accuracy, controlling for age
+```{r,echo=FALSE}
+
+#correlation test between rt slope and wj4 score
+pcor.test(vsl_acc_table$wj3_score, vsl_acc_table$subj_corr, vsl_acc_table$age, method="spearman")
 ```
 
 
@@ -256,7 +287,7 @@ t.test(vsl_acc_table$subj_corr[vsl_acc_table$gender=="Female"],vsl_acc_table$sub
 ##Table 1
 ```{r,echo=FALSE}
 table_output <- subj_table[,c("list_vsl_id","mean_rt","rt_slope","dprime")]
-a <- seq(1,141,1)
+a <- seq(1,140,1)
 new_id <- sprintf("mtsl_%03d", a)
 table_output$list_vsl_id<-new_id
 colnames(table_output) <- c("ID","Mean RT","RT Slope","D'")
@@ -268,7 +299,7 @@ kable(table_output)
 
 ```{r,echo=FALSE}
 table_output2 <- vsl_acc_table[,c("acc_id","subj_corr","vsl_cond")]
-a <- seq(1,145,1)
+a <- seq(1,142,1)
 new_id <- sprintf("mtsl_%03d", a)
 table_output2$acc_id<-new_id
 colnames(table_output2) <- c("ID","accuracy(%)","condition")
