--- a/mturk_ssl.Rmd
+++ b/mturk_ssl.Rmd
@@ -61,9 +61,9 @@ for (i in row_number){
     if (fam_block[i+1,][,"rt"]!=-1000){
         rt_col[(match(i,row_number))] <- 480+fam_block[i+1,][,"rt"]}
     
-    if (fam_block[i-1,][,"rt"]>0){
-        rt_col[(match(i,row_number))] <- -(480-fam_block[i-1,][,"rt"])
-    if (fam_block[i-1,][,"rt"]<0){
+    if (fam_block[i-1,][,"rt"]!=-1000 & fam_block[i-1,][,"rt"]>0 ){
+        rt_col[(match(i,row_number))] <- -(480-fam_block[i-1,][,"rt"])}
+    if (fam_block[i-1,][,"rt"]!=-1000 & fam_block[i-1,][,"rt"]<0 ){
         rt_col[(match(i,row_number))] <- -(480+fam_block[i-1,][,"rt"])   
     }}
 fam_trial <- data.frame(trial,rt_col,id)
