--- a/mturk_ssl.Rmd
+++ b/mturk_ssl.Rmd
@@ -7,35 +7,40 @@ header-includes:
   - \usepackage{color}
 ---
 
+
+
 \definecolor{coolblack}{rgb}{0.0, 0.18, 0.39}
 \definecolor{violet}{rgb}{0.19, 0.55, 0.91}
 ```{r,echo=FALSE,warning=FALSE}
 #Loading library
 library(ggplot2)
-library(ppcor)
 library(knitr)
-library(nortest)
 library(readr)
+library(ppcor)
 ```
 
 
-```{r,echo=FALSE}
+```{r,echo=FALSE,warning=FALSE}
+#Please refer to mturk_ssl to see the specific comment for each step, since they are similar 
+
 #importing files
 total_ssl_trial <- 48
-language_1 = list(1,2,2,2,1,1,2,1,1,2,1,2,1,1,2,2,1,1,2,1,2,2,1,2,2,2,1,2,1,2,1,1)
+language_1 = list(1,1,2,1,1,1,2,2,1,1,1,2,2,1,2,1,2,2,1,2,1,1,2,2,2,2,1,1,2,1,2,2)
 language_2 = list(1,1,2,1,1,1,2,2,2,2,1,1,1,2,2,1,2,2,1,1,2,1,2,1,2,1,2,1,1,2,2,2)
 
-ssl <- read.csv("C:/Users/Qlab/Downloads/mturk_data/ssl.csv")
-wj3 <- read.csv("C:/Users/Qlab/Downloads/mturk_data/wj3_score.csv")
-scf <-  read.csv("C:/Users/Qlab/Downloads/mturk_data/scf.csv")
+ssl <- read_csv("Z:/projects/mturk/raw/cleaned_data/ssl2.csv")
+wj3 <- read.csv("C:/Users/Qlab/Downloads/mturk/mturk_data/wj3_score.csv")
+scf <-  read.csv("C:/Users/Qlab/Downloads/mturk/mturk_data/scf.csv")
 #Clean data
 
+#for ssl2
+ssl_par_id <- NULL
+for (i in seq(from=2,to=length(ssl$responses),by=816)){ssl_par_id<-append(ssl_par_id,rep(as.character(ssl$value[i]),816))}
+ssl$par_id<-ssl_par_id
 
 ssl$stimulus<- gsub(".wav","",ssl$stimulus)
 ssl$stimulus<- gsub("sound/","",ssl$stimulus)
 
-#exclusion for people who only have 0-1 correct hit
-ssl <- ssl[which(ssl$par_id!="A1KAIOBTXQ77A6" & ssl$par_id != "mtslAG1213" & ssl$par_id!="A3UVW94KB9UBAJ" & ssl$par_id!="mtslaa0292"),]
 ```
 
 
@@ -55,19 +60,22 @@ trial <- NULL
 target <- NULL
 row_number <- which(fam_block$targ==fam_block$stimulus)
 for (i in row_number){
-    rt_col <- append(rt_col,fam_block[i,][,"rt"]) 
+    if (fam_block[i,]$rt > 0){rt_col <- append(rt_col,fam_block[i,][,"rt"]-100)} 
+    if (fam_block[i,]$rt < 0){rt_col <- append(rt_col,fam_block[i,][,"rt"])}
     trial <- append(trial,paste(fam_block[i,][,"trial_index"]))
     id <- append(id,paste(fam_block[i,]$par_id))
-    if (fam_block[i+1,][,"rt"]!=-1000){
-        rt_col[(match(i,row_number))] <- 480+fam_block[i+1,][,"rt"]}
+    if (fam_block[i+1,][,"rt"]!=-1000 & fam_block[i+1,][,"rt"]<0){
+        rt_col[(match(i,row_number))] <- 380-fam_block[i+1,][,"rt"]}
     
-    if (fam_block[i-1,][,"rt"]!=-1000 & fam_block[i-1,][,"rt"]>0 ){
-        rt_col[(match(i,row_number))] <- -(480-fam_block[i-1,][,"rt"])}
-    if (fam_block[i-1,][,"rt"]!=-1000 & fam_block[i-1,][,"rt"]<0 ){
-        rt_col[(match(i,row_number))] <- -(480+fam_block[i-1,][,"rt"])   
+    if (fam_block[i+1,][,"rt"]!=-1000 & fam_block[i+1,][,"rt"]>0){
+    rt_col[(match(i,row_number))] <- 580+fam_block[i+1,][,"rt"]}
+    
+    if (fam_block[i-1,][,"rt"]>0){
+        rt_col[(match(i,row_number))] <- 480-fam_block[i-1,][,"rt"]
+        
     }}
-fam_trial <- data.frame(trial,rt_col,id)
-
+fam_trial <- data.frame(unlist(trial),unlist(rt_col),id)
+colnames(fam_trial) <- c("trial","rt_col","id")
 a<-NULL
 for (i in (unique(fam_trial$id))){a<- append(a,sum(fam_trial$id==i))}
 reindex <- NULL
@@ -80,7 +88,14 @@ false_alarm <- NULL
 mean_rt <- NULL
 rt_slope <- NULL
 
+
+
 mean_table <- fam_trial[which(fam_trial$rt_col!=-1000 & fam_trial$rt_col<960 & fam_trial$rt_col>-480), ] #only accept answers in range of -1000 < x < 1000
+
+#mean_table <- mean_table[mean_table$id!="A1KAIOBTXQ77A6",]
+#mean_table <- mean_table[mean_table$id!="mtslAG1213",]
+mean_table <- mean_table[mean_table$id!="A2Z0XILU6M38BTn",]
+
 list_ssl_id <- unique(mean_table$id)
 for(id in list_ssl_id){
   mean_rt<-append(mean_rt,round(mean(mean_table$rt_col[mean_table$id==id]),digits=3))
@@ -95,6 +110,27 @@ subj_table <- data.frame(list_ssl_id,mean_rt, rt_slope,hit_rate, miss_rate,corre
 dprime<-NULL
 for (i in seq(from=1,to=length(subj_table$list_ssl_id),by=1)){dprime<-append(dprime,qnorm(subj_table[i,]$hit_rate-0.00000001)-qnorm(subj_table[i,]$false_alarm+0.000000001))} #minus 0.000000001 to avoid perfect hit rate
 subj_table$dprime <- round(dprime,3)
+
+
+#Add Wj4 score into a column to look at SL performance and language skills
+wj3$ID<-gsub("_wj3.csv","",wj3$ID)
+for(id in wj3$ID){ subj_table$wj3_score[which(subj_table$list_ssl_id==id)]<-wj3$total[wj3$ID==id]}
+
+for(id in scf$ID){ subj_table$gender[which(subj_table$list_ssl_id==id)]<-paste(scf$Gender[scf$ID==id])}
+for(id in scf$ID){ subj_table$handedness[which(subj_table$list_ssl_id==id)]<-paste(scf$Hand[scf$ID==id])}
+for(id in scf$ID){ subj_table$Language[which(subj_table$list_ssl_id==id)]<-paste(scf$Language[scf$ID==id])}
+for(id in scf$ID){ subj_table$age[which(subj_table$list_ssl_id==id)]<-paste(scf$age[scf$ID==id])}
+subj_table$Language <- as.numeric(subj_table$Language)
+subj_table$age <- as.numeric(subj_table$age)
+
+lowerbound <- mean(subj_table$rt_slope) - 2.5*sd(subj_table$rt_slope)
+upperbound <- mean(subj_table$rt_slope) + 2.5*sd(subj_table$rt_slope)
+subj_table <- subj_table[subj_table$rt_slope>=lowerbound,]
+subj_table <- subj_table[subj_table$rt_slope<=upperbound,]
+
+subset2<- subj_table[subj_table$Language>=20,]
+subset1 <- subj_table[subj_table$gender!="Other",]
+
 ```
 
 ```{r, echo=FALSE}
@@ -145,49 +181,33 @@ ssl_acc_table <- data.frame(acc_id,subj_corr,ssl_cond)
 wj3$ID<-gsub("_wj3.csv","",wj3$ID)
 for(id in wj3$ID){ subj_table$wj3_score[which(subj_table$list_ssl_id==id)]<-wj3$total[wj3$ID==id]}
 
-for(id in scf$ID){ subj_table$gender[which(subj_table$list_ssl_id==id)]<-paste(scf$Gender[scf$ID==id])}
-for(id in scf$ID){ subj_table$handedness[which(subj_table$list_ssl_id==id)]<-paste(scf$Hand[scf$ID==id])}
-for(id in scf$ID){ subj_table$age[which(subj_table$list_ssl_id==id)]<-paste(scf$age[scf$ID==id])}
-subj_table$age <- as.numeric(subj_table$age)
-
-subset1 <- subj_table[subj_table$gender!="Other",]
-
- for(id in scf$ID){ subj_table$Language[which(subj_table$list_ssl_id==id)]<-paste(scf$Language[scf$ID==id])}
-subj_table$Language <- as.numeric(subj_table$Language)
-
-subset2<- subj_table[subj_table$Language>=20,]
 
 
 for(id in scf$ID){ ssl_acc_table$gender[which(ssl_acc_table$acc_id==id)]<-paste(scf$Gender[scf$ID==id])}
 for(id in wj3$ID){ ssl_acc_table$wj3_score[which(ssl_acc_table$acc_id==id)]<-wj3$total[wj3$ID==id]}
+ for(id in scf$ID){ ssl_acc_table$age[which(ssl_acc_table$acc_id==id)]<-paste(scf$age[scf$ID==id])}
+ for(id in scf$ID){ ssl_acc_table$hand[which(ssl_acc_table$acc_id==id)]<-paste(scf$Hand[scf$ID==id])}
 
  for(id in scf$ID){ ssl_acc_table$Language[which(ssl_acc_table$acc_id==id)]<-paste(scf$Language[scf$ID==id])}
-for(id in scf$ID){ ssl_acc_table$age[which(ssl_acc_table$acc_id==id)]<-paste(scf$age[scf$ID==id])}
-ssl_acc_table$age <- as.numeric(ssl_acc_table$age)
-for(id in scf$ID){ ssl_acc_table$handedness[which(ssl_acc_table$acc_id==id)]<-paste(scf$Hand[scf$ID==id])}
-
 ssl_acc_table$Language <- as.numeric(ssl_acc_table$Language)
+ssl_acc_table$age <- as.numeric(ssl_acc_table$age)
+
 ```
 
-### Cronbach's alpha score for the consistency of the SSL Accuracy task is 0.6. This is a lower score which may imply that the questions of this task are not good enough. 
+### Cronbach's alpha score 
 ```{r,echo=FALSE,warning=FALSE}
 
-d <- matrix(nrow=(length(ssl_accuracy$ans)/32),ncol=32)
-for(i in seq(from=1,to=(length(ssl_accuracy$ans)/32),by=1)){d[i,] <- rbind(ssl_accuracy$corr[((i-1)*32+1):(i*32)])}
-psych::alpha(d,check.keys = TRUE)$total$std.alpha
-```
+ssl_acc1 <- ssl_accuracy[ssl_accuracy$cond=="lang1",]
+d1 <- matrix(nrow=62,ncol=32)
+for(i in seq(from=1,to=62,by=1)){d1[i,] <- rbind(ssl_acc1$corr[((i-1)*32+1):(i*32)])}
+a1<-psych::alpha(d1,check.keys = TRUE)$total$std.alpha
 
-##Check some variables for normality
-```{r,echo=FALSE}
-par(mfrow=c(2,2))
-qqnorm(subj_table$wj3_score,main="WJ4 Score");qqline(subj_table$wj3_score, col = 2)
-qqnorm(subj_table$rt_slope, main="RT Slope");qqline(subj_table$rt_slope, col = 2)
-qqnorm(subj_table$age,main="Age");qqline(subj_table$age, col = 2)
-qqnorm(ssl_acc_table$subj_corr,main="Accuracy");qqline(ssl_acc_table$subj_corr, col = 2)
-ad.test(subj_table$wj3_score)
-ad.test(subj_table$rt_slope)
-ad.test(subj_table$age)
-ad.test(ssl_acc_table$subj_corr)
+ssl_acc2 <- ssl_accuracy[ssl_accuracy$cond=="lang2",]
+d2 <- matrix(nrow=76,ncol=32)
+for(i in seq(from=1,to=76,by=1)){d2[i,] <- rbind(ssl_acc2$corr[((i-1)*32+1):(i*32)])}
+a2<-psych::alpha(d2,check.keys = TRUE)$total$std.alpha
+a<- c(a1,a2)
+mean(a)
 ```
 
 
@@ -195,16 +215,12 @@ ad.test(ssl_acc_table$subj_corr)
 ###Looking at RT 
 
 ```{r,echo=FALSE,warning=FALSE}
+t.test(subj_table$rt_slope,mu=0,alternative="less")
 
 #mean time by trial
 ggplot(mean_table,aes(y=rt_col,x=reindex))+geom_point(color='deepskyblue3') + geom_smooth(method='lm') + labs(x="Trial Index", y="Response time (ms)",title="Resposne time by trial index in ssl")
 ```
 
-###Whether trial index is related to response time
-```{r,echo=FALSE}
-m1 = aov(rt_col~reindex+Error(id/reindex),data=mean_table)
-summary(m1)
-```
 
 ###Looking at Accuracy: the mean accuracy of this task is above chance (50%)
 ```{r,echo=FALSE}
@@ -214,91 +230,56 @@ t.test(ssl_acc_table$subj_corr,mu=0.5,alternative="greater")
 
 #Relationship between SL and other factors
 
-```{r,echo=FALSE}
-summary(lm(rt_slope~ wj3_score * age + as.factor(handedness) + as.factor(gender),data=subj_table))
-
-summary(lm(subj_corr ~ wj3_score * age + as.factor(handedness) + as.factor(gender) ,data=ssl_acc_table))
-```
-
-
-##RT slope and other factors
-```{r,echo=FALSE,warning=FALSE}
+##RT and other factors
+```{r,echo=FALSE,warning=FALSE,include=FALSE}
 
 #RT by WJ4 score
-#ggplot(subj_table[subj_table$wj3_score>25,],aes(y=mean_rt,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time (ms)",title="Resposne time by WJ4 score in ssl") + ylim(c(100,700))
-
+ggplot(subj_table[subj_table$wj3_score>25,],aes(y=mean_rt,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time (ms)",title="Resposne time by WJ4 score in ssl") + ylim(c(100,700))
 #RT Slope by WJ4
 ggplot(subj_table[subj_table$wj3_score>25,],aes(y=rt_slope,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time slope",title="Resposne time slope by WJ4 score in SSL")  + ylim(c(-15,15))
 
 #Mean rt vs WJ4 score by gender
-#qplot(wj3_score,mean_rt,data=subset1[subset1$wj3_score>25,],facets=(. ~ gender),color= gender, main="ssl RT vs WJ4 score by gender", ylab="Response time", xlab="WJ4 score", ylim=c(100,600)) + geom_smooth(method='lm') + scale_color_discrete(name="Gender") 
+qplot(wj3_score,mean_rt,data=subset1[subset1$wj3_score>25,],facets=(. ~ gender),color= gender, main="ssl RT vs WJ4 score by gender", ylab="Response time", xlab="WJ4 score", ylim=c(100,600)) + geom_smooth(method='lm') + scale_color_discrete(name="Gender") 
 
 #RT slope  vs WJ4 score by gender
 qplot(wj3_score,rt_slope,data=subset1[subset1$wj3_score>25,],facets=(. ~ gender),color= gender, main="ssl RT slope vs WJ4 scpre by gender", ylab="RT Slope", xlab="WJ4 score", ylim=c(-15,15)) + geom_smooth(method='lm') + scale_color_discrete(name="Gender")
 
 
 #Mean rt vs WJ4 score by Handedness
-#qplot(wj3_score,mean_rt,data=subj_table[subj_table$wj3_score>25,],facets=(. ~ handedness),color= handedness, main="ssl RT by Handedness", ylab="Response time", xlab="Trial index", ylim=c(100,600)) + geom_smooth(method='lm') + scale_color_discrete(name="Handedness")
-
+qplot(wj3_score,mean_rt,data=subj_table[subj_table$wj3_score>25,],facets=(. ~ handedness),color= handedness, main="ssl RT by Handedness", ylab="Response time", xlab="Trial index", ylim=c(100,600)) + geom_smooth(method='lm') + scale_color_discrete(name="Handedness")
 #RT Slope vs WJ4 score by Handedness
 qplot(wj3_score,rt_slope,data=subj_table[subj_table$wj3_score>25,],facets=(. ~ handedness),color= handedness, main="ssl RT slope by Handedness", ylab="Response time", xlab="Trial index", ylim=c(-15,15)) + geom_smooth(method='lm') + scale_color_discrete(name="Handedness")
 
 
 
 #RT by Language
-#ggplot(subset2,aes(y=mean_rt,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time (ms)",title="Resposne time by Language score in ssl") + ylim(c(100,700))
-
+ggplot(subset2,aes(y=mean_rt,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time (ms)",title="Resposne time by Language score in ssl") + ylim(c(100,700))
 #RT Slope by Language
-ggplot(subset2[subset2$Language<=50,],aes(y=rt_slope,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="Language Experience Score", y="Response time (ms)",title="RT slope by Language score in ssl") + ylim(c(-15,15))
+ggplot(subset2,aes(y=rt_slope,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time (ms)",title="Resposne time slope by Language score in ssl") + ylim(c(-15,15))
 ```
 
 
-## A partial correlation test between WJ4 score and RT Slope, controlling for age
+## A simple correlation test between WJ4 score and RT Slope, controlling for age
 ```{r,echo=FALSE}
 
 #correlation test between rt slope and wj4 score
-pcor.test(subj_table$wj3_score, subj_table$rt_slope, subj_table$age, method="spearman")
+pcor.test(subj_table$rt_slope, subj_table$wj3_score,subj_table$age,method="spearman")
 ```
 
+## A simple correlation test between WJ4 score and Accuracy, controlling for age
+```{r,echo=FALSE}
 
+#correlation test between rt slope and wj4 score
+pcor.test(ssl_acc_table$subj_corr,ssl_acc_table$wj3_score,ssl_acc_table$age,method="spearman")
+```
+
+##RT slope and other factors
+```{r,echo=FALSE}
+a<-lm(formula = subj_corr ~ wj3_score * age + as.factor(hand) + as.factor(gender), data = ssl_acc_table)
+summary(a)
+```
 ##Accuracy and other factors
 ```{r,echo=FALSE}
-
-ggplot(ssl_acc_table[ssl_acc_table$wj3_score>25,],aes(y=subj_corr,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Accuracy",title="Accuracy by WJ4 score in ssl") 
-ggplot(ssl_acc_table[ssl_acc_table$Language>=20,],aes(y=subj_corr,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="Language", y="Accuracy",title="Accuracy by Language in ssl") 
-
-
-```
-
-
-
-## A partial correlation test between WJ4 score and Accuracy, controlling for age
-```{r,echo=FALSE}
-
-#correlation test between rt slope and wj4 score
-pcor.test(subj_table$wj3_score, ssl_acc_table$subj_corr, subj_table$age, method="spearman")
-```
-
-
-#Appendix
-##Table 1
-```{r,echo=FALSE}
-table_output <- subj_table[,c("list_ssl_id","mean_rt","rt_slope","dprime")]
-a <- seq(1,134,1)
-new_id <- sprintf("mtsl_%03d", a)
-table_output$list_ssl_id<-new_id
-colnames(table_output) <- c("ID","Mean RT","RT Slope","D'")
-kable(table_output)
-```
-
-##Table 2
-
-
-```{r,echo=FALSE}
-table_output2 <- ssl_acc_table[,c("acc_id","subj_corr","ssl_cond")]
-a <- seq(1,134,1)
-new_id <- sprintf("mtsl_%03d", a)
-table_output2$acc_id<-new_id
-colnames(table_output2) <- c("ID","accuracy(%)","condition")
-kable(table_output2)
+a1<-lm(formula = rt_slope ~ wj3_score * age + as.factor(handedness) + as.factor(gender), data = subj_table)
+summary(a1)
 ```
