--- a/mturk_tsl.Rmd
+++ b/mturk_tsl.Rmd
@@ -11,23 +11,25 @@ header-includes:
 ```{r,echo=FALSE,warning=FALSE}
 #Loading library
 library(ggplot2)
-library(ppcor)
 library(knitr)
-library(nortest)
 library(readr)
-library(psych)
+library(ppcor)
+
 ```
 
 
 ```{r,echo=FALSE}
+#Please refer to mturk_vsl to see the specific comment for each step, since they are similar 
+
+
 #importing files
 total_tsl_trial <- 48
 language_1 = list(1,2,2,2,1,1,2,1,1,2,1,2,1,1,2,2,1,1,2,1,2,2,1,2,2,2,1,2,1,2,1,1)
 language_2 = list(1,1,2,1,1,1,2,2,2,2,1,1,1,2,2,1,2,2,1,1,2,1,2,1,2,1,2,1,1,2,2,2)
 
-tsl <- read.csv("C:/Users/Qlab/Downloads/mturk_data/tsl.csv")
-wj3 <- read.csv("C:/Users/Qlab/Downloads/mturk_data/wj3_score.csv")
-scf <-  read.csv("C:/Users/Qlab/Downloads/mturk_data/scf.csv")
+tsl <- read_csv("Z:/projects/mturk/raw/cleaned_data/tsl2.csv")
+wj3 <- read.csv("C:/Users/Qlab/Downloads/mturk/mturk_data/wj3_score.csv")
+scf <-  read.csv("C:/Users/Qlab/Downloads/mturk/mturk_data/scf.csv")
 #Clean data
 
 
@@ -53,19 +55,23 @@ trial <- NULL
 target <- NULL
 row_number <- which(fam_block$targ==fam_block$stimulus)
 for (i in row_number){
-    rt_col <- append(rt_col,fam_block[i,][,"rt"]) 
+    if (fam_block[i,]$rt > 0){rt_col <- append(rt_col,fam_block[i,][,"rt"]-100)} 
+    if (fam_block[i,]$rt < 0){rt_col <- append(rt_col,fam_block[i,][,"rt"])}
     trial <- append(trial,paste(fam_block[i,][,"trial_index"]))
     id <- append(id,paste(fam_block[i,]$par_id))
-    if (fam_block[i+1,][,"rt"]!=-1000){
-        rt_col[(match(i,row_number))] <- 480+fam_block[i+1,][,"rt"]}
+    if (fam_block[i+1,][,"rt"]!=-1000 & fam_block[i+1,][,"rt"]<0){
+        rt_col[(match(i,row_number))] <- 380-fam_block[i+1,][,"rt"]}
+ 
+      if (fam_block[i+1,][,"rt"]!=-1000 & fam_block[i+1,][,"rt"]>0){
+    rt_col[(match(i,row_number))] <- 580+fam_block[i+1,][,"rt"]}
     
-    if (fam_block[i-1,][,"rt"]!=-1000 & fam_block[i-1,][,"rt"]>0 ){
-        rt_col[(match(i,row_number))] <- -(480-fam_block[i-1,][,"rt"])}
-    if (fam_block[i-1,][,"rt"]!=-1000 & fam_block[i-1,][,"rt"]<0 ){
-        rt_col[(match(i,row_number))] <- -(480+fam_block[i-1,][,"rt"])   
+    if (fam_block[i-1,][,"rt"]>0){
+        rt_col[(match(i,row_number))] <- 480-fam_block[i-1,][,"rt"]
+        
     }}
 
-fam_trial <- data.frame(trial,rt_col,id)
+fam_trial <- data.frame(unlist(trial),unlist(rt_col),id)
+colnames(fam_trial) <- c("trial","rt_col","id")
 reindex <- rep(1:total_tsl_trial,length(fam_trial$trial)/48)
 fam_trial$reindex <- reindex
 hit_rate <- NULL
@@ -78,12 +84,17 @@ timeline <- c(rep("first half",total_tsl_trial/2),rep("second half",total_tsl_tr
 timeline <- rep(timeline,length(fam_trial$trial)/48)
 fam_trial$timeline <- timeline
 mean_table <- fam_trial[which(fam_trial$rt_col!=-1000 & fam_trial$rt_col<960 & fam_trial$rt_col>-480), ] #only accept answers in range of -1000 < x < 1000
+
+#exclude people who only have one rt point, so rtslope cannot be computed
+#mean_table <- mean_table[mean_table$id!="A3QS96739O5M6F",]
+#mean_table <- mean_table[mean_table$id!="A36TE52PSYAAD6",]
+#mean_table <- mean_table[mean_table$id!="mtslcc0991",]
+#mean_table <- mean_table[mean_table$id!="mtslnn0585",]
+#mean_table <- mean_table[mean_table$id!="mtslsc0184",]
 list_tsl_id <- unique(mean_table$id)
 for(id in list_tsl_id){
   mean_rt<-append(mean_rt,round(mean(mean_table$rt_col[mean_table$id==id]),digits=3))
-  if(id=="A3QS96739O5M6F" | id=="A36TE52PSYAAD6" | id=="mtslcc0991" | id =="mtslnn0585" | id=="mtslsc0184"){rt_slope <- append(rt_slope,0)
-  } else {
-    rt_slope <-append(rt_slope,round(summary(lm(mean_table$rt_col[mean_table$id==id]~mean_table$reindex[mean_table$id==id]))$coefficient[2,1],digits=3))}
+  rt_slope <-append(rt_slope,round(summary(lm(mean_table$rt_col[mean_table$id==id]~mean_table$reindex[mean_table$id==id]))$coefficient[2,1],digits=3))
   hit_rate<-append(hit_rate,round(sum(!is.na(mean_table$rt_col[mean_table$id==id]))/total_tsl_trial,digits =2))
   miss_rate<-append(miss_rate,round(sum(fam_trial$rt_col[fam_trial$id==id]==-1000)/total_tsl_trial,digits=2))
   correct_rejection <- append(correct_rejection, round(sum(fam_block$rt[fam_block$par_id==id]==-1000 & fam_block$targ[fam_block$par_id==id]!=fam_block$stimulus[fam_block$par_id==id])/528,digits=2)) #528 is the total number of stimuli in the familiarization block
@@ -94,6 +105,23 @@ subj_table <- data.frame(list_tsl_id,mean_rt, rt_slope,hit_rate, miss_rate,corre
 dprime<-NULL
 for (i in seq(from=1,to=length(subj_table$list_tsl_id),by=1)){dprime<-append(dprime,qnorm(subj_table[i,]$hit_rate-0.00000001)-qnorm(subj_table[i,]$false_alarm+0.000000001))} #minus 0.000000001 to avoid perfect hit rate
 subj_table$dprime <- round(dprime,3)
+
+wj3$ID<-gsub("_wj3.csv","",wj3$ID)
+for(id in wj3$ID){ subj_table$wj3_score[which(subj_table$list_tsl_id==id)]<-wj3$total[wj3$ID==id]}
+
+for(id in scf$ID){ subj_table$gender[which(subj_table$list_tsl_id==id)]<-paste(scf$Gender[scf$ID==id])}
+for(id in scf$ID){ subj_table$handedness[which(subj_table$list_tsl_id==id)]<-paste(scf$Hand[scf$ID==id])}
+for(id in scf$ID){ subj_table$Language[which(subj_table$list_tsl_id==id)]<-paste(scf$Language[scf$ID==id])}
+for(id in scf$ID){ subj_table$age[which(subj_table$list_tsl_id==id)]<-paste(scf$age[scf$ID==id])}
+
+subj_table$Language <- as.numeric(subj_table$Language)
+subj_table$age <- as.numeric(subj_table$age)
+
+lowerbound <- mean(subj_table$rt_slope) - 2.5*sd(subj_table$rt_slope)
+upperbound <- mean(subj_table$rt_slope) + 2.5*sd(subj_table$rt_slope)
+subj_table <- subj_table[subj_table$rt_slope>=lowerbound,]
+subj_table <- subj_table[subj_table$rt_slope<=upperbound,]
+
 
 ```
 
@@ -144,60 +172,42 @@ for (id in acc_id) {subj_corr <- append(subj_corr,round(sum(tsl_accuracy$corr[ts
 tsl_acc_table <- data.frame(acc_id,subj_corr,tsl_cond)
 
 
+lowerbound <- mean(tsl_acc_table$subj_corr) - 2.5*sd(tsl_acc_table$subj_corr)
+upperbound <- mean(tsl_acc_table$subj_corr) + 2.5*sd(tsl_acc_table$subj_corr)
+tsl_acc_table <- tsl_acc_table[tsl_acc_table$subj_corr>=lowerbound,]
+tsl_acc_table <- tsl_acc_table[tsl_acc_table$subj_corr<=upperbound,]
 
-
-
-
-wj3$ID<-gsub("_wj3.csv","",wj3$ID)
-for(id in wj3$ID){ subj_table$wj3_score[which(subj_table$list_tsl_id==id)]<-wj3$total[wj3$ID==id]}
-
-for(id in scf$ID){ subj_table$gender[which(subj_table$list_tsl_id==id)]<-paste(scf$Gender[scf$ID==id])}
-for(id in scf$ID){ subj_table$handedness[which(subj_table$list_tsl_id==id)]<-paste(scf$Hand[scf$ID==id])}
-for(id in scf$ID){ subj_table$Language[which(subj_table$list_tsl_id==id)]<-paste(scf$Language[scf$ID==id])}
-subj_table$Language <- as.numeric(subj_table$Language)
-for(id in scf$ID){ subj_table$age[which(subj_table$list_tsl_id==id)]<-paste(scf$age[scf$ID==id])}
-subj_table$age <- as.numeric(subj_table$age)
-
-subset2<- subj_table[subj_table$Language>=20,]
-subset1 <- subj_table[subj_table$gender!="Other",]
 
 for(id in scf$ID){ tsl_acc_table$gender[which(tsl_acc_table$acc_id==id)]<-paste(scf$Gender[scf$ID==id])}
 for(id in wj3$ID){ tsl_acc_table$wj3_score[which(tsl_acc_table$acc_id==id)]<-wj3$total[wj3$ID==id]}
+for(id in scf$ID){ tsl_acc_table$hand[which(tsl_acc_table$acc_id==id)]<-paste(scf$Hand[scf$ID==id])}
+ for(id in scf$ID){ tsl_acc_table$age[which(tsl_acc_table$acc_id==id)]<-paste(scf$age[scf$ID==id])}
 
  for(id in scf$ID){ tsl_acc_table$Language[which(tsl_acc_table$acc_id==id)]<-paste(scf$Language[scf$ID==id])}
 tsl_acc_table$Language <- as.numeric(tsl_acc_table$Language)
-
-for(id in scf$ID){ tsl_acc_table$age[which(tsl_acc_table$acc_id==id)]<-paste(scf$age[scf$ID==id])}
 tsl_acc_table$age <- as.numeric(tsl_acc_table$age)
-for(id in scf$ID){ tsl_acc_table$handedness[which(tsl_acc_table$acc_id==id)]<-paste(scf$Hand[scf$ID==id])}
-
-
-
 
 ```
 
 
-### Cronbach's alpha score for the consistency of the tsl Accuracy task is 0.62. The consistency of the questions in this task is poor.
+### Cronbach's alpha score
 ```{r,echo=FALSE,warning=FALSE}
-d <- matrix(nrow=(length(tsl_accuracy$ans)/32),ncol=32)
-for(i in seq(from=1,to=(length(tsl_accuracy$ans)/32),by=1)){d[i,] <- rbind(tsl_accuracy$corr[((i-1)*32+1):(i*32)])}
-psych::alpha(d,check.keys = TRUE)$total$std.alpha
-```
+#d <- matrix(nrow=(length(tsl_accuracy$ans)/32),ncol=32)
+#for(i in seq(from=1,to=(length(tsl_accuracy$ans)/32),by=1)){d[i,] <- rbind(tsl_accuracy$corr[((i-1)*32+1):(i*32)])}
+#psych::alpha(d,check.keys = TRUE)$total$std.alpha
 
+tsl_acc1 <- tsl_accuracy[tsl_accuracy$cond=="lang1",]
+d1 <- matrix(nrow=66,ncol=32)
+for(i in seq(from=1,to=66,by=1)){d1[i,] <- rbind(tsl_acc1$corr[((i-1)*32+1):(i*32)])}
+a1<-psych::alpha(d1,check.keys = TRUE)$total$std.alpha
 
+tsl_acc2 <- tsl_accuracy[tsl_accuracy$cond=="lang2",]
+d2 <- matrix(nrow=67,ncol=32)
+for(i in seq(from=1,to=67,by=1)){d2[i,] <- rbind(tsl_acc2$corr[((i-1)*32+1):(i*32)])}
+a2<-psych::alpha(d2,check.keys = TRUE)$total$std.alpha
 
-
-##Check some variables for normality
-```{r,echo=FALSE}
-par(mfrow=c(2,2))
-qqnorm(subj_table$wj3_score,main="WJ4 Score");qqline(subj_table$wj3_score, col = 2)
-qqnorm(subj_table$rt_slope, main="RT Slope");qqline(subj_table$rt_slope, col = 2)
-qqnorm(subj_table$age,main="Age");qqline(subj_table$age, col = 2)
-qqnorm(tsl_acc_table$subj_corr,main="Accuracy");qqline(tsl_acc_table$subj_corr, col = 2)
-ad.test(subj_table$wj3_score)
-ad.test(subj_table$rt_slope)
-ad.test(subj_table$age)
-ad.test(tsl_acc_table$subj_corr)
+alpha <- mean(a1,a2)
+print(alpha)
 ```
 
 
@@ -205,15 +215,10 @@ ad.test(tsl_acc_table$subj_corr)
 ###Looking at RT 
 
 ```{r,echo=FALSE,warning=FALSE}
+t.test(subj_table$rt_slope,mu=0,alternative="less")
 
 ggplot(mean_table,aes(y=rt_col,x=reindex))+geom_point(color='deepskyblue3') + geom_smooth(method='lm') + labs(x="Trial Index", y="Response time (ms)",title="Resposne time by trial index in tsl")
 
-```
-
-###Whether trial index is related to response time
-```{r,echo=FALSE,warning=FALSE}
-m1 = aov(rt_col~reindex+Error(id/reindex),data=mean_table)
-summary(m1)
 ```
 
 ###Looking at Accuracy: the mean accuracy of this task is above chance (50%)
@@ -221,15 +226,13 @@ summary(m1)
 t.test(tsl_acc_table$subj_corr,mu=0.5,alternative="greater")
 ```
 
-#Relationship between SL and other factors
 
-##RT and other factors
-```{r,echo=FALSE,warning=FALSE}
+```{r,echo=FALSE,warning=FALSE,include=FALSE}
 #RT by WJ4 score
 #ggplot(subj_table[subj_table$wj3_score>25,],aes(y=mean_rt,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time (ms)",title="Resposne time by WJ4 score in tsl") + ylim(c(100,700))
 
 #RT Slope by WJ4
-ggplot(subj_table[subj_table$wj3_score>25,],aes(y=rt_slope,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time slope",title="Resposne time slope by WJ4 score in tsl")  + ylim(c(-15,15))
+#ggplot(subj_table[subj_table$wj3_score>25,],aes(y=rt_slope,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Response time slope",title="Resposne time slope by WJ4 score in tsl")  + ylim(c(-15,15))
 
 #RT slope  vs WJ4 score by gender
 #qplot(wj3_score,rt_slope,data=subset1[subset1$wj3_score>25,],facets=(. ~ gender),color= gender, main="tsl RT slope vs WJ4 scpre by gender", ylab="RT Slope", xlab="WJ4 score", ylim=c(-15,15)) + geom_smooth(method='lm') + scale_color_discrete(name="Gender")
@@ -251,53 +254,29 @@ ggplot(subj_table[subj_table$wj3_score>25,],aes(y=rt_slope,x=wj3_score))+geom_po
 
 ```
 
-
-## A partial correlation test between WJ4 score and RT Slope, controlling for age
+## A simple correlation test between WJ4 score and RT Slope, controlling for age
 ```{r,echo=FALSE}
 
 #correlation test between rt slope and wj4 score
-pcor.test(subj_table$wj3_score, subj_table$rt_slope, subj_table$age, method="spearman")
+pcor.test(subj_table$rt_slope, subj_table$wj3_score,subj_table$age,method="spearman")
 ```
 
+## A simple correlation test between WJ4 score and Accuracy, controlling for age
+```{r,echo=FALSE}
+#correlation test between rt slope and wj4 score
+pcor.test(tsl_acc_table$subj_corr,tsl_acc_table$wj3_score,tsl_acc_table$age,method="spearman")
+```
 
+##RT slope and other factors
+```{r,echo=FALSE}
+a<-lm(formula = subj_corr ~ wj3_score * age + as.factor(hand) + as.factor(gender), data = tsl_acc_table)
+summary(a)
+```
 ##Accuracy and other factors
 ```{r,echo=FALSE}
-
-ggplot(tsl_acc_table[tsl_acc_table$wj3_score>25,],aes(y=subj_corr,x=wj3_score))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="WJ4 Score", y="Accuracy",title="Accuracy by WJ4 score in tsl") 
-#ggplot(tsl_acc_table[tsl_acc_table$Language>=20,],aes(y=subj_corr,x=Language))+geom_point(color='sienna') + geom_smooth(method='lm',color="sienna1") + labs(x="Language", y="Accuracy",title="Accuracy by Language in tsl") 
-
-
+a1<-lm(formula = rt_slope ~ wj3_score * age + as.factor(handedness) + as.factor(gender), data = subj_table)
+summary(a1)
 ```
 
 
-## A partial correlation test between WJ4 score and Accuracy, controlling for age
-```{r,echo=FALSE}
-
-#correlation test between rt slope and wj4 score
-pcor.test(tsl_acc_table$wj3_score, tsl_acc_table$subj_corr, tsl_acc_table$age, method="spearman")
-```
-
-
-#Appendix
-##Table 1
-```{r,echo=FALSE}
-table_output <- subj_table[,c("list_tsl_id","mean_rt","rt_slope","dprime")]
-a <- seq(1,129,1)
-new_id <- sprintf("mtsl_%03d", a)
-table_output$list_tsl_id<-new_id
-colnames(table_output) <- c("ID","Mean RT","RT Slope","D'")
-kable(table_output)
-```
-
-##Table 2
-
-
-```{r,echo=FALSE}
-table_output2 <- tsl_acc_table[,c("acc_id","subj_corr","tsl_cond")]
-a <- seq(1,133,1)
-new_id <- sprintf("mtsl_%03d", a)
-table_output2$acc_id<-new_id
-colnames(table_output2) <- c("ID","accuracy(%)","condition")
-kable(table_output2)
-```
 
